[workspace]
members = [
    ".",
    "crates/*",
    "components/*",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.5.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
schemars = "1"
sha2 = "0.11"
ciborium = "0.2"
base64 = "0.22"
glob = "0.3"
tempfile = "3"
zip = "8"
serde_yaml_bw = { package = "serde_yaml_gtc", version = "2.5" }
greentic-types = "0.5"
greentic-interfaces = "0.5"
wit-bindgen = "0.57"
provider-common = { path = "crates/provider-common" }

[package]
name = "greentic-state"
version = "0.4.5"
edition = "2024"
license = "MIT"
description = "Greentic JSON working-memory store with in-memory and Redis backends"
repository = "https://github.com/greenticai/greentic-state"
keywords = ["greentic", "state", "redis", "json", "multi-tenant"]
categories = ["data-structures", "asynchronous"]
readme = "README.md"

[features]
default = ["redis"]
redis = ["dep:redis"]
schema = ["dep:schemars", "greentic-types/schemars"]

[dependencies]
greentic-types.workspace = true
greentic-interfaces.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = ["serde", "parsing"] }
parking_lot = "0.12"
dashmap = "6"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
redis = { version = "1", features = ["tokio-comp"], optional = true }
schemars = { workspace = true, optional = true }
tracing = "0.1"

[dev-dependencies]
proptest = "1"
uuid = { version = "1", features = ["v4"] }
serde_yaml_bw.workspace = true
