[workspace]
members = [
    ".",
    "crates/*",
    "components/*",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "1.1.0-dev.0"
license = "MIT"

[workspace.dependencies]
serde_json = "1"
thiserror = "2"
schemars = "1"
sha2 = "0.11"
ciborium = "0.2"
base64 = "0.22"
glob = "0.3"
tempfile = "3"
zip = "8"
greentic-types = ">=1.1.0-dev, <1.2.0-0"
greentic-interfaces = ">=1.1.0-dev, <1.2.0-0"
wit-bindgen = "0.57"

[workspace.dependencies.serde]
version = "1"
features = [
    "derive",
]

[workspace.dependencies.serde_yaml_bw]
package = "serde_yaml_gtc"
version = "2.5"

[workspace.dependencies.provider-common]
path = "crates/provider-common"

[package]
name = "greentic-state"
version = "1.1.0-dev.0"
edition = "2024"
license = "MIT"
description = "Greentic JSON working-memory store with in-memory and Redis backends"
repository = "https://github.com/greenticai/greentic-state"
keywords = [
    "greentic",
    "state",
    "redis",
    "json",
    "multi-tenant",
]
categories = [
    "data-structures",
    "asynchronous",
]
readme = "README.md"

[features]
default = [
    "redis",
]
redis = [
    "dep:redis",
]
schema = [
    "dep:schemars",
    "greentic-types/schemars",
]

[dependencies]
parking_lot = "0.12"
dashmap = "6"
tracing = "0.1"

[dependencies.greentic-types]
workspace = true

[dependencies.greentic-interfaces]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.serde_json]
workspace = true

[dependencies.thiserror]
workspace = true

[dependencies.time]
version = "0.3"
features = [
    "serde",
    "parsing",
]

[dependencies.tokio]
version = "1"
features = [
    "rt-multi-thread",
    "macros",
    "time",
]

[dependencies.redis]
version = "1"
features = [
    "tokio-comp",
]
optional = true

[dependencies.schemars]
workspace = true
optional = true

[dev-dependencies]
proptest = "1"

[dev-dependencies.uuid]
version = "1"
features = [
    "v4",
]

[dev-dependencies.serde_yaml_bw]
workspace = true
