[package]
name = "state-provider-memory"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha2.workspace = true
greentic-types.workspace = true
wit-bindgen.workspace = true
base64.workspace = true
provider-common.workspace = true

[package.metadata.component.target]
path = "wit/state-provider-memory"
world = "component-v0-v6-v0"

[package.metadata.component.target.dependencies]
"greentic:provider-schema-core" = { path = "wit/state-provider-memory/deps/provider-schema-core" }
