[package]
name = "provider-common"
edition.workspace = true
version.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
schemars = { workspace = true, optional = true }
sha2.workspace = true
ciborium.workspace = true
greentic-types.workspace = true
base64.workspace = true

[dev-dependencies]
serde_json.workspace = true

[features]
schema = ["schemars"]
